<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/picker_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/picker_palette"
        android:layout_width="match_parent"
        android:layout_height="@dimen/picker_palette_height"
        android:layout_marginBottom="@dimen/margin"
        android:background="@color/design_default_color_primary" />

    <LinearLayout style="@style/PickerControlContainer">

        <TextView
            style="@style/PickerControlLabel"
            android:text="@string/r" />

        <SeekBar style="@style/PickerControlBar" />

        <com.google.android.material.textfield.TextInputLayout style="@style/PickerControlInput.Container">

            <com.google.android.material.textfield.TextInputEditText style="@style/PickerControlInput" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout style="@style/PickerControlContainer">

        <TextView
            style="@style/PickerControlLabel"
            android:text="@string/g" />

        <SeekBar style="@style/PickerControlBar" />

        <com.google.android.material.textfield.TextInputLayout style="@style/PickerControlInput.Container">

            <com.google.android.material.textfield.TextInputEditText style="@style/PickerControlInput" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout style="@style/PickerControlContainer">

        <TextView
            style="@style/PickerControlLabel"
            android:text="@string/b" />

        <SeekBar style="@style/PickerControlBar" />

        <com.google.android.material.textfield.TextInputLayout style="@style/PickerControlInput.Container">

            <com.google.android.material.textfield.TextInputEditText style="@style/PickerControlInput" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>