<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/item_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24">

        <TextView
            android:id="@+id/item_toolbar_title"
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_item" />

    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/item_chip_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:clipToPadding="false"
        android:paddingStart="@dimen/margin"
        android:paddingEnd="@dimen/margin"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/item_toolbar">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/item_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="@dimen/margin"
            app:singleLine="true"
            app:singleSelection="true" />

    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/item_edit_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/double_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_chip_scroll">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/scroll_bottom_padding">

            <EditText
                android:id="@+id/item_name"
                style="@style/NoAutoFill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:background="@null"
                android:hint="@string/item_name_hint"
                android:inputType="textCapSentences"
                android:paddingTop="@dimen/list_action_padding"
                android:paddingBottom="@dimen/list_action_padding"
                android:textAlignment="center"
                android:textSize="@dimen/big_font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/item_edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:textColor="@color/body_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <TextView
                android:id="@+id/item_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:text="@string/item_name_error"
                android:textColor="@color/error_color"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <Spinner
                android:id="@+id/item_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/double_margin"
                android:dropDownWidth="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/item_add_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_error" />

            <ImageButton
                android:id="@+id/item_add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/title_add_category"
                android:paddingStart="@dimen/half_margin"
                android:paddingTop="@dimen/list_action_padding"
                android:paddingEnd="@dimen/half_margin"
                android:paddingBottom="@dimen/list_action_padding"
                android:src="@drawable/outline_add_24"
                app:layout_constraintBottom_toBottomOf="@id/item_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_category"
                app:layout_constraintTop_toTopOf="@id/item_category" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_notes_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:hint="@string/item_notes_hint"
                app:layout_constraintTop_toBottomOf="@id/item_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_notes"
                    style="@style/Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_number_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:hint="@string/item_number_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_notes_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_by_date_title"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:text="@string/item_use_by_date_title"
                android:textColor="@color/body"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/item_by_date"
                app:layout_constraintTop_toBottomOf="@id/item_number_container" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_by_date"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:background="?attr/selectableItemBackground"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/item_by_date_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/item_by_date_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/item_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:src="@drawable/outline_add_24"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@id/item_finish"
        app:layout_constraintEnd_toStartOf="@id/item_finish"
        app:tint="?android:attr/textColorPrimaryInverse" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/item_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:src="@drawable/outline_done_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?android:attr/textColorPrimaryInverse" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_search_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_toolbar">

        <EditText
            android:id="@+id/item_search_box"
            style="@style/NoAutoFill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/item_search_hint"
            android:imeOptions="actionGo"
            android:inputType="textAutoComplete|textCapSentences"
            android:paddingStart="@dimen/margin"
            android:paddingTop="@dimen/add_item_input_margin"
            android:paddingEnd="@dimen/margin"
            android:paddingBottom="@dimen/add_item_input_margin"
            app:layout_constraintEnd_toStartOf="@id/item_search_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/item_search_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/item_close_search_cd"
            android:padding="@dimen/list_action_padding"
            android:src="@drawable/outline_close_24"
            app:layout_constraintBottom_toBottomOf="@id/item_search_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_search_box" />

        <View
            android:id="@+id/item_search_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/half_margin"
            android:background="?android:attr/dividerHorizontal"
            app:layout_constraintTop_toBottomOf="@id/item_search_box" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_search_results"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="@dimen/half_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_search_divider" />

        <TextView
            android:id="@+id/item_search_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/item_card_elevation"
            android:text="@string/item_search_empty"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_search_divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>