<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_sheet">

        <EditText
            android:id="@+id/category_sheet_name"
            style="@style/NoAutoFill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/xl_margin"
            android:layout_marginEnd="@dimen/margin"
            android:background="@null"
            android:hint="@string/add_category_name_hint"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:textAlignment="center"
            android:textSize="@dimen/big_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category_sheet_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:textColor="@color/error_color"
            android:textSize="@dimen/small_font"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_sheet_name" />

        <View
            android:id="@+id/category_sheet_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:background="?android:attr/dividerHorizontal"
            app:layout_constraintTop_toBottomOf="@id/category_sheet_error" />

        <TextView
            android:id="@+id/category_sheet_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/add_category_color_label"
            android:textColor="@color/body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_sheet_divider" />

        <com.twisthenry8gmail.fullcart.ColorDotGridLayout
            android:id="@+id/category_sheet_color_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_sheet_color_label" />

        <TextView
            android:id="@+id/category_sheet_editing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/body_secondary"
            app:layout_constraintBottom_toBottomOf="@id/category_sheet_confirm"
            app:layout_constraintEnd_toStartOf="@id/category_sheet_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/category_sheet_confirm" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/category_sheet_confirm"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_sheet_color_grid" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

