<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin">

        <View
            android:id="@+id/navigation_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/navigation_header_background"
            app:layout_constraintBottom_toBottomOf="@id/button_list"
            app:layout_constraintEnd_toEndOf="@id/nav_header_guide_right"
            app:layout_constraintStart_toStartOf="@id/nav_header_guide_left"
            app:layout_constraintTop_toTopOf="@id/button_list" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/nav_header_guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/nav_header_guide_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp" />

        <TextView
            android:id="@+id/button_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/margin"
            android:paddingTop="@dimen/nav_header_vertical_padding"
            android:paddingEnd="@dimen/large_margin"
            android:paddingBottom="@dimen/nav_header_vertical_padding"
            android:text="@string/title_list"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/pantry_transfer_dot"
            android:layout_width="@dimen/pantry_transfer_dot_width"
            android:layout_height="@dimen/pantry_transfer_dot_width"
            android:layout_marginStart="@dimen/half_margin"
            android:background="@drawable/pantry_transfer_dot"
            android:scaleX="0"
            android:scaleY="0"
            app:layout_constraintBottom_toBottomOf="@id/button_pantry"
            app:layout_constraintStart_toStartOf="@id/button_pantry"
            app:layout_constraintTop_toTopOf="@id/button_pantry" />

        <TextView
            android:id="@+id/button_pantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/large_margin"
            android:paddingTop="@dimen/nav_header_vertical_padding"
            android:paddingEnd="@dimen/margin"
            android:paddingBottom="@dimen/nav_header_vertical_padding"
            android:text="@string/title_pantry"
            android:textColor="@color/body"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/fragment_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/toolbar"
            app:layout_constraintTop_toBottomOf="@id/navigation_background" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:navigationIcon="@drawable/outline_menu_24" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_item"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimaryInverse"
            app:backgroundTint="@color/accent"
            app:icon="@drawable/outline_add_24"
            app:iconTint="?android:attr/textColorPrimaryInverse"
            app:layout_constraintBottom_toTopOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>